--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -59,6 +59,7 @@ repos:
           - "pylint"
         language: system
         types: [python]
+        exclude: ^alembic/
 
       - id: hadolint
         name: hadolint
